# Notebook

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  DOC.md  LICENSE  README.md  flake.nix
cmake/: FindCairo.cmake  FindSDL2.cmake  FindSDL2_TTF.cmake  FindSDL2_ttf.cmake
includes/: app.h  canvas.h  draw.h  event.h  line.h  menu.h  pipe.h  renderer.h  save.h  status.h  stroke.h  texture.h  window.h
includes/canvas/: box.h  camera.h  debug.h  general_handler.h  layout.h  line.h  save.h  selection_handler.h  status.h  stroke.h  stroke_handler.h  text.h  texture.h
includes/comp/: renderer.h  window.h
includes/menu/: bar.h  layout.h
includes/renderer/: sdl2.h
res/: Icons.xcf
src/: main.cpp
